# phoneme

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml  usage_example.ipynb
.github/workflows/: ci.yml  release.yml
examples/: colab_quickstart.ipynb  quickstart.py  usage_example.ipynb
hf/: dataset_card.md
original/: cost_fits.py  phoneme_info.py  sym_dirichlet.py
src/phoneme_entropy/: __init__.py  data.py  dirichlet.py  estimators.py  maxent.py  segmentation.py
src/phoneme_entropy/data/: celex_en_sample.csv
tests/: conftest.py  test_data.py  test_dirichlet.py  test_estimators.py  test_maxent.py  test_segmentation.py
