[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoneme-entropy"
version = "0.1.0"
description = "Phoneme-level entropy, informativity, and maximum-entropy tools, extending entropy-estimators."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Suchir Salhan", email = "suchirsalhan@gmail.com" },
]
keywords = [
    "entropy",
    "phonology",
    "phonemes",
    "information theory",
    "maximum entropy",
    "dirichlet",
    "psycholinguistics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies. NOTE: the base entropy estimators live in
# `entropy-estimators` (F. Moscoso del Prado Martín), which is currently only
# distributed via GitHub, so we pin it as a direct VCS reference. If/when it is
# published to PyPI, replace the line below with a normal version spec, e.g.
#   "entropy-estimators>=0.1",
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "mpmath>=1.2",
    "entropy-estimators @ git+https://github.com/fermosc24/entropy-estimators.git",
]

[project.optional-dependencies]
# Plotting for phoneme_entropy.dirichlet.plot_ranks and the example notebook.
plot = ["matplotlib>=3.4", "seaborn>=0.11"]
# Access to the private Hugging Face dataset (phoneme_entropy.data.load_hf_dataset).
data = ["datasets>=2.14", "huggingface_hub>=0.16"]
# Developer / reproduction toolchain (tests, notebooks, linting).
dev = [
    "pytest>=7.0",
    "jupyter",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/suchirsalhan/phoneme"
Repository = "https://github.com/suchirsalhan/phoneme"
"Upstream (entropy-estimators)" = "https://github.com/fermosc24/entropy-estimators"

[tool.hatch.build.targets.wheel]
packages = ["src/phoneme_entropy"]

[tool.hatch.build.targets.wheel.force-include]
# Ship the bundled CELEX sample CSV inside the wheel.
"src/phoneme_entropy/data/celex_en_sample.csv" = "phoneme_entropy/data/celex_en_sample.csv"

[tool.hatch.metadata]
# Required so hatchling accepts the direct git reference for entropy-estimators.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
