[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoneme-entropy"
version = "0.1.1"
description = "Phoneme-level entropy, informativity, and maximum-entropy tools, extending entropy-estimators."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Fermín Moscoso del Prado Martín" },
    { name = "Suchir Salhan", email = "suchirsalhan@gmail.com" },
]
keywords = [
    "entropy",
    "phonology",
    "phonemes",
    "information theory",
    "maximum entropy",
    "dirichlet",
    "psycholinguistics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies. The entropy estimators are vendored into
# `phoneme_entropy.estimators` (see THIRD_PARTY_LICENSES), so there is no VCS
# dependency and this package installs cleanly from PyPI.
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "mpmath>=1.2",
]

[project.optional-dependencies]
# Plotting for phoneme_entropy.dirichlet.plot_ranks and the example notebook.
plot = ["matplotlib>=3.4", "seaborn>=0.11"]
# Access to the private Hugging Face dataset (phoneme_entropy.data.load_hf_dataset).
data = ["datasets>=2.14", "huggingface_hub>=0.16"]
# Developer / reproduction toolchain (tests, notebooks, linting).
dev = [
    "pytest>=7.0",
    "jupyter",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/suchirsalhan/phoneme"
Repository = "https://github.com/suchirsalhan/phoneme"
"Upstream (entropy-estimators)" = "https://github.com/fermosc24/entropy-estimators"

[tool.hatch.build.targets.wheel]
packages = ["src/phoneme_entropy"]
# The bundled CELEX sample under phoneme_entropy/_data/ is a tracked, non-Python
# data file inside the package; hatchling includes it automatically. (It lives in
# _data/, not data/, to avoid colliding with the data.py module.)
artifacts = ["src/phoneme_entropy/_data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# src-layout: make the package importable during tests independent of how (or
# whether) it was installed. Avoids editable-install/pytest path quirks.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
